--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <!-- build:js js/lib.js -->
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://code.angularjs.org/1.4.4/angular-resource.min.js"></script>
