user can log in and receives its info correctly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Time off</title>
 
     <!-- build:css styles/lib.css -->
@@ -71,6 +71,7 @@
     <!-- inject:js -->
     <script src="src/app/app.js"></script>
     <script src="src/app/common/common.services.js"></script>
+    <script src="src/app/common/directives/enterPress.js"></script>
     <script src="src/app/common/services/enumService.js"></script>
     <script src="src/app/common/services/userService.js"></script>
     <script src="src/app/common/services/authorizationService.js"></script>
