subrouting added for absenceRequests

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <script src="src/app/navigation/navigationService.js"></script>
 
     <script src="src/app/views/absenceRequests/absenceRequestsController.js"></script>
+    <script src="src/app/views/absenceRequests/myRequests/myRequestsController.js"></script>
     <script src="src/app/views/calendar/calendarController.js"></script>
     <script src="src/app/views/dashboard/dashboardController.js"></script>
     <script src="src/app/views/employeeGroups/employeeGroupsController.js"></script>
@@ -93,6 +94,7 @@
     <script src="src/app/views/specialDays/specialDaysController.js"></script>
     <script src="src/app/views/tasks/tasksController.js"></script>
     <script src="src/app/routing.js"></script>
+    <script src="src/app/views/absenceRequests/subRouting.js"></script>
     <!-- endinject -->
 
     <!-- inject:templates:js -->
