added gulp task to inject app's js into index

--- a/index.html
+++ b/index.html
@@ -69,32 +69,31 @@
     <!-- endbower -->
 
     <!-- inject:js -->
-    <script src="src/app/app.js"></script>
-    <script src="src/app/common/common.services.js"></script>
-    <script src="src/app/common/directives/enterPress.js"></script>
-    <script src="src/app/common/services/enumService.js"></script>
-    <script src="src/app/common/services/userService.js"></script>
-    <script src="src/app/common/services/authorizationService.js"></script>
-    <script src="src/app/common/services/unauthorizedInterceptorService.js"></script>
-    <script src="src/app/common/resources/communicationService.js"></script>
-    <script src="src/app/navigation/navigationController.js"></script>
-    <script src="src/app/navigation/navigationService.js"></script>
-
-    <script src="src/app/views/absenceRequests/absenceRequestsController.js"></script>
-    <script src="src/app/views/absenceRequests/myRequests/myRequestsController.js"></script>
-    <script src="src/app/views/calendar/calendarController.js"></script>
-    <script src="src/app/views/dashboard/dashboardController.js"></script>
-    <script src="src/app/views/employeeGroups/employeeGroupsController.js"></script>
-    <script src="src/app/views/employeePositions/employeePositionsController.js"></script>
-    <script src="src/app/views/employees/employeesController.js"></script>
-    <script src="src/app/views/login/loginController.js"></script>
-    <script src="src/app/views/logs/logsController.js"></script>
-    <script src="src/app/views/overtimes/overtimesController.js"></script>
-    <script src="src/app/views/reports/reportsController.js"></script>
-    <script src="src/app/views/specialDays/specialDaysController.js"></script>
-    <script src="src/app/views/tasks/tasksController.js"></script>
-    <script src="src/app/routing.js"></script>
-    <script src="src/app/views/absenceRequests/subRouting.js"></script>
+    <script src="/src/app/app.js"></script>
+    <script src="/src/app/routing.js"></script>
+    <script src="/src/app/common/common.services.js"></script>
+    <script src="/src/app/navigation/navigationController.js"></script>
+    <script src="/src/app/navigation/navigationService.js"></script>
+    <script src="/src/app/common/directives/enterPress.js"></script>
+    <script src="/src/app/common/resources/communicationService.js"></script>
+    <script src="/src/app/common/services/authorizationService.js"></script>
+    <script src="/src/app/common/services/enumService.js"></script>
+    <script src="/src/app/common/services/unauthorizedInterceptorService.js"></script>
+    <script src="/src/app/common/services/userService.js"></script>
+    <script src="/src/app/views/absenceRequests/absenceRequestsController.js"></script>
+    <script src="/src/app/views/absenceRequests/subRouting.js"></script>
+    <script src="/src/app/views/calendar/calendarController.js"></script>
+    <script src="/src/app/views/dashboard/dashboardController.js"></script>
+    <script src="/src/app/views/employeeGroups/employeeGroupsController.js"></script>
+    <script src="/src/app/views/employeePositions/employeePositionsController.js"></script>
+    <script src="/src/app/views/employees/employeesController.js"></script>
+    <script src="/src/app/views/login/loginController.js"></script>
+    <script src="/src/app/views/logs/logsController.js"></script>
+    <script src="/src/app/views/overtimes/overtimesController.js"></script>
+    <script src="/src/app/views/reports/reportsController.js"></script>
+    <script src="/src/app/views/specialDays/specialDaysController.js"></script>
+    <script src="/src/app/views/tasks/tasksController.js"></script>
+    <script src="/src/app/views/absenceRequests/myRequests/myRequestsController.js"></script>
     <!-- endinject -->
 
     <!-- inject:templates:js -->
