added directive for jQuery-based Chosen plugin proxifying

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/humane-js/3.2.2/themes/flatty.min.css">
+    <link rel="stylesheet" href="3d-party/chosen.min.css">
     <!-- endbower -->
 
     <!-- inject:css -->
@@ -65,6 +66,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/humane-js/3.2.2/humane.min.js"></script>
+    <script src="3d-party/chosen.jquery.min.js"></script>
     <!-- bower:js -->
     <!-- endbower -->
 
@@ -74,6 +76,7 @@
     <script src="/src/app/common/common.services.js"></script>
     <script src="/src/app/navigation/navigationController.js"></script>
     <script src="/src/app/navigation/navigationService.js"></script>
+    <script src="/src/app/common/directives/chosen.js"></script>
     <script src="/src/app/common/directives/enterPress.js"></script>
     <script src="/src/app/common/resources/communicationService.js"></script>
     <script src="/src/app/common/services/authorizationService.js"></script>
@@ -93,7 +96,7 @@
     <script src="/src/app/views/reports/reportsController.js"></script>
     <script src="/src/app/views/specialDays/specialDaysController.js"></script>
     <script src="/src/app/views/tasks/tasksController.js"></script>
-    <script src="/src/app/views/absenceRequests/myRequests/myRequestsController.js"></script>
+    <script src="/src/app/views/absenceRequests/my/myRequestsController.js"></script>
     <!-- endinject -->
 
     <!-- inject:templates:js -->
