swapped class and ui-sref tags

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a ui-sref="dashboard" class="navbar-brand">Time OFF</a>
+                <a class="navbar-brand" ui-sref="dashboard">Time OFF</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse" ng-if="vm.isLoggedIn()">
                 <ul class="nav navbar-nav">
