--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container jumbotron">
         <div ui-view></div>
     </div>
 
