--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" href="src/styles/styles.css">
+    <link rel="stylesheet" href="src/styles/chosen-bootstrap.css">
     <!-- endinject -->
     <!-- endbuild -->
 
