--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/humane-js/3.2.2/humane.min.js"></script>
     <script src="3d-party/chosen.jquery.min.js"></script>
+    <script src="3d-party/ui-bootstrap-tpls-0.13.3.min.js"></script>
     <!-- bower:js -->
     <!-- endbower -->
 
