--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse" ng-if="vm.isLoggedIn()">
                 <ul class="nav navbar-nav">
-                    <li ng-repeat="navItem in vm.getNavigationItems()" ng-if="vm.isTabAllowed(navItem)" ng-class="{ active: vm.isTabActive(navItem.name)}">
+                    <li ng-repeat="navItem in vm.getMainNavigationItems()" ng-if="vm.isTabAllowed(navItem)" ng-class="{ active: vm.isTabActive(navItem.name) || vm.isSubTabActive(navItem.name)}">
                         <a ui-sref='{{navItem.name}}'>{{navItem.title}}</a>
                     </li>
                 </ul>
@@ -77,11 +77,11 @@
     <script src="/src/app/common/common.services.js"></script>
     <script src="/src/app/navigation/navigationController.js"></script>
     <script src="/src/app/navigation/navigationService.js"></script>
-    <script src="/src/app/common/directives/chosen.js"></script>
-    <script src="/src/app/common/directives/enterPress.js"></script>
     <script src="/src/app/common/resources/absenceRequestsService.js"></script>
     <script src="/src/app/common/resources/communicationService.js"></script>
     <script src="/src/app/common/resources/userInfoService.js"></script>
+    <script src="/src/app/common/directives/chosen.js"></script>
+    <script src="/src/app/common/directives/enterPress.js"></script>
     <script src="/src/app/common/services/authorizationService.js"></script>
     <script src="/src/app/common/services/constantsService.js"></script>
     <script src="/src/app/common/services/enumService.js"></script>
@@ -90,8 +90,8 @@
     <script src="/src/app/views/absenceRequests/absenceRequestsController.js"></script>
     <script src="/src/app/views/absenceRequests/subRouting.js"></script>
     <script src="/src/app/views/calendar/calendarController.js"></script>
-    <script src="/src/app/views/dashboard/dashboardController.js"></script>
     <script src="/src/app/views/employeeGroups/employeeGroupsController.js"></script>
+    <script src="/src/app/views/dashboard/dashboardController.js"></script>
     <script src="/src/app/views/employeePositions/employeePositionsController.js"></script>
     <script src="/src/app/views/employees/employeesController.js"></script>
     <script src="/src/app/views/login/loginController.js"></script>
@@ -100,8 +100,9 @@
     <script src="/src/app/views/reports/reportsController.js"></script>
     <script src="/src/app/views/specialDays/specialDaysController.js"></script>
     <script src="/src/app/views/tasks/tasksController.js"></script>
-    <script src="/src/app/views/absenceRequests/dm/dmRequestsController.js"></script>
     <script src="/src/app/views/absenceRequests/add/addRequestController.js"></script>
+    <script src="/src/app/views/absenceRequests/dm/dmRequestsController.js"></script>
+    <script src="/src/app/views/absenceRequests/hr/hrRequestsController.js"></script>
     <script src="/src/app/views/absenceRequests/my/myRequestsController.js"></script>
     <script src="/src/app/views/absenceRequests/sm/smRequestsController.js"></script>
     <script src="/src/app/views/absenceRequests/view/viewRequestController.js"></script>
